tests/parsing/smtlib/poly/errors/022_var_binding_list_unclosed_2.expected
File "tests/parsing/smtlib/poly/errors/022_var_binding_list_unclosed_2.psmt2", line 2, character 21-24:
2 | (assert (let ((x 42) foo) (= x 1)))
                         ^^^
Error while parsing a list of variable binding, read the symbol 'foo',
      but expected a closing parenthesis or a variable binding of the form
      "(var term)".
